@@ -22,6 +22,7 @@ ENH: added TTheme.BaseUrl and TTheme.BasePath property (Qiang)
 ENH: added TListControl.SelectedValues property (Qiang)
 ENH: added TThemeManager.AvailableThemes property (Qiang)
 ENH: refactored TUserManager and TAuthManager so that they are easier to be extended (Qiang)
+ENH: template syntax now supports setting event handler via subproperties (Qiang)
 CHG: Ticket#151 - URL format is modified to handle empty GET values (Qiang)
 CHG: Ticket#153 - TAssetManager now ignores .svn directories (Qiang)
 NEW: TTableHeaderRow, TTableFooterRow and table section support (Qiang)
